Revert "fix(client): add overflow-x: auto to page layouts"
This reverts commit ff3ee579d976a6d687a97b80d636cf246545f585.

--- a/judgels-client/src/components/FullPageLayout/FullPageLayout.scss
+++ b/judgels-client/src/components/FullPageLayout/FullPageLayout.scss
@@ -5,5 +5,4 @@
   min-height: 100vh;
   margin-left: auto;
   margin-right: auto;
-  overflow-x: auto;
 }
