--- a/judgels-client/src/components/FullWidthPageLayout/FullWidthPageLayout.scss
+++ b/judgels-client/src/components/FullWidthPageLayout/FullWidthPageLayout.scss
@@ -2,5 +2,4 @@
 
 .layout-full-width-page {
   min-height: 100vh;
-  overflow-x: auto;
 }
