--- a/judgels-client/src/components/SingleColumnLayout/SingleColumnLayout.scss
+++ b/judgels-client/src/components/SingleColumnLayout/SingleColumnLayout.scss
@@ -6,5 +6,4 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow-x: auto;
 }
